[package]
name = "evm-precompiled-modexp"
version = "0.11.0-beta.0"
description = "modexp precompiled contracts for SputnikVM."
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/etclabscore/sputnikvm"

[dependencies]
evm = { version = "0.11.0-beta.0", path = "../..", default-features = false }
etcommon-bigint = { version = "0.2", default-features = false }
num-bigint = "0.1"

[dev-dependencies]
etcommon-hexutil = "0.2"

[features]
default = ["std", "c-secp256k1"]
rlp = ["etcommon-bigint/rlp"]
c-secp256k1 = ["evm/c-secp256k1"]
rust-secp256k1 = ["evm/rust-secp256k1"]
std = ["evm/std"]
